// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
>>>>>>> 5d946afd134b9c6cf544f9cb53974d3ddb3f29af
exports[`Answer component loads and displays Answer component 1`] = `
<div
  className="answer"
>
  <p
    className="answerTitle"
  >
    We are selling it here without any markup from the middleman!
  </p>
  <div
    className="answerLinks"
  >
    <p>
      by 
      Seller
      , MONTH, DD, YEAR | Helpful? 
      <a>
        Yes
      </a>
       (
      4
      ) | 
      <a>
        Report
      </a>
    </p>
  </div>
</div>
`;

exports[`AnswerList component loads and displays AnswerList component 1`] = `
<div
  className="answers"
>
  <p>
    A: 
  </p>
  <div
    className="answerList"
  >
    <div
      className="answer"
    >
      <p
        className="answerTitle"
      >
        We are selling it here without any markup from the middleman!
      </p>
      <div
        className="answerLinks"
      >
        <p>
          by 
          Seller
          , MONTH, DD, YEAR | Helpful? 
          <a>
            Yes
          </a>
           (
          4
          ) | 
          <a>
            Report
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
=======
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
>>>>>>> 5d946afd134b9c6cf544f9cb53974d3ddb3f29af
exports[`Question component loads and displays Question component 1`] = `
<div
  className="question"
>
  <div
    className="questionTitle"
  >
    <p>
      Q: 
      Why is this product cheaper here than other sites?
    </p>
    <div
      className="questionLinks"
    >
      <p>
        Helpful? 
        <a>
          Yes
        </a>
         (
        4
        ) | 
        <a>
          Add Answer
        </a>
      </p>
    </div>
  </div>
  <div
<<<<<<< HEAD
<<<<<<< HEAD
    className="answers"
  >
    <p>
      A: 
    </p>
    <div
      className="answerList"
    >
      <div
        className="answer"
      >
        <p
          className="answerTitle"
        >
          We are selling it here without any markup from the middleman!
        </p>
        <div
          className="answerLinks"
        >
          <p>
            by 
            Seller
            , MONTH, DD, YEAR | Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Report
            </a>
          </p>
        </div>
      </div>
    </div>
=======
    className="answerList"
=======
    className="answers"
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
  >
    <p>
      A: 
    </p>
<<<<<<< HEAD
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
=======
    <div
      className="answerList"
    >
      <div
        className="answer"
      >
        <p
          className="answerTitle"
        >
          We are selling it here without any markup from the middleman!
        </p>
        <div
          className="answerLinks"
        >
          <p>
            by 
            Seller
            , MONTH, DD, YEAR | Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Report
            </a>
          </p>
        </div>
      </div>
    </div>
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
  </div>
</div>
`;

<<<<<<< HEAD
exports[`QuestionButtons component loads and displays Question Buttons comoponent 1`] = `
<div
  className="question-buttons"
>
  <button>
    MORE ANSWERED QUESTIONS
  </button>
  <button
    onClick={[Function]}
  >
    ADD A QUESTION +
  </button>
</div>
`;

=======
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
exports[`Questions widget component loads and displays questions widget component 1`] = `
<div
  className="questionsWidget"
>
  <h6>
    QUESTIONS & ANSWERS
  </h6>
  <div>
    <input
      id="questionsSearchBar"
      onChange={[Function]}
      placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
      type="search"
    />
  </div>
  <div
    className="questionList"
  >
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          Why is this product cheaper here than other sites?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            4
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
        className="answers"
      >
        <p>
          A: 
        </p>
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              We are selling it here without any markup from the middleman!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                Seller
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                4
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
=======
        className="answerList"
=======
        className="answers"
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
      >
        <p>
          A: 
        </p>
<<<<<<< HEAD
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
=======
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              We are selling it here without any markup from the middleman!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                Seller
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                4
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
      </div>
    </div>
    <div
      className="question"
    >
      <div
        className="questionTitle"
      >
        <p>
          Q: 
          How long does it last?
        </p>
        <div
          className="questionLinks"
        >
          <p>
            Helpful? 
            <a>
              Yes
            </a>
             (
            2
            ) | 
            <a>
              Add Answer
            </a>
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
        className="answers"
      >
        <p>
          A: 
        </p>
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              Some of the seams started splitting the first time I wore it!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                sillyguy
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                6
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              9 lives
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                iluvdogz
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                31
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
=======
        className="answerList"
=======
        className="answers"
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
      >
        <p>
          A: 
        </p>
<<<<<<< HEAD
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
=======
        <div
          className="answerList"
        >
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              Some of the seams started splitting the first time I wore it!
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                sillyguy
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                6
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
          <div
            className="answer"
          >
            <p
              className="answerTitle"
            >
              9 lives
            </p>
            <div
              className="answerLinks"
            >
              <p>
                by 
                iluvdogz
                , MONTH, DD, YEAR | Helpful? 
                <a>
                  Yes
                </a>
                 (
                31
                ) | 
                <a>
                  Report
                </a>
              </p>
            </div>
          </div>
        </div>
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
      </div>
    </div>
  </div>
  <div
<<<<<<< HEAD
    className="question-buttons"
  >
    <button>
      MORE ANSWERED QUESTIONS
    </button>
    <button
      onClick={[Function]}
    >
      ADD A QUESTION +
    </button>
=======
    className="questionButtons"
  >
    <p>
      REPLACE WITH MOREQUESTIONS COMPONENT
    </p>
    <p>
      REPLACE WITH ADDQUESTIONS COMPONENT
    </p>
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
  </div>
</div>
`;

exports[`QuestionsList component loads and displays QuestionsList component 1`] = `null`;

<<<<<<< HEAD
<<<<<<< HEAD
exports[`SearchBar component loads and displays searcbBar component 1`] = `
=======
exports[`SearchBar component loads and displays SearcbBar component 1`] = `
>>>>>>> c320f6a90dc5e09a0d0358d7c4b4ebc7ac7b037d
=======
exports[`SearchBar component loads and displays SearchBar component 1`] = `
>>>>>>> 345571cd303da81464c0bc4b73c6ddef7bd80d0c
<div>
  <input
    id="questionsSearchBar"
    placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
    type="search"
  />
</div>
`;

exports[`SearchBar component loads and displays searcbBar component 1`] = `
<div>
  <input
    id="questionsSearchBar"
    placeholder="HAVE A QUESTION? SEARCH FOR ANSWERS..."
    type="search"
  />
</div>
`;
